--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.omar.deathnote"
-    android:versionCode="15"
+    android:versionCode="18"
     android:versionName="1.0.5.free.prod" >
 
     <uses-sdk
         android:minSdkVersion="15"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="22" />
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
  
- 
-  
-
- 
-     <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />  
 
     <supports-screens
         android:anyDensity="true"
@@ -27,7 +22,7 @@
         android:xlargeScreens="true"
          />
 
-    <application
+    <application     
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -42,7 +37,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.omar.deathnote.Note"
+            android:name="com.omar.deathnote.NoteActivity"
             android:label=" "
             android:launchMode="singleTop" >
         </activity>
