--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,21 @@ repositories {
     jcenter()
 }
 
+
+
 android {
+    signingConfigs {
+
+            debug {
+                storeFile file('debug.keystore')
+                keyAlias 'androiddebugkey'
+                keyPassword 'android'
+                storePassword 'android'
+            }
+
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.0"
-
     defaultConfig {
         applicationId "com.omar.deathnote"
         minSdkVersion 9
@@ -32,22 +43,20 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+        }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
-
     /*rxJava*/
     compile 'io.reactivex:rxandroid:0.25.0'
     compile 'io.reactivex:rxjava-math:0.21.0'
     /*injections*/
     compile 'com.jakewharton:butterknife:5.1.1'
     /*pics*/
-
     compile 'com.squareup.picasso:picasso:2.4.0'
-
 }
