--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,7 @@ dependencies {
     /*pics*/
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.google.code.gson:gson:2.3'
-
+    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.7.4@aar'){
+        transitive=true
+    }
 }
