--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
                 android:label=" "
                 android:launchMode="singleTop"
                 android:screenOrientation="sensorPortrait"
-                android:windowSoftInputMode="adjustResize">
+                android:windowSoftInputMode="stateHidden|adjustResize">
         </activity>
         <activity
                 android:name="com.omar.deathnote.pref.PrefActivity"
