--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,6 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.1'
-    }
-}
 apply plugin: 'com.android.application'
-
-repositories {
-    jcenter()
-}
-
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     signingConfigs {
@@ -26,41 +14,78 @@ android {
 
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "com.omar.deathnote"
-        minSdkVersion 11
-        targetSdkVersion 22
+        minSdkVersion 15
+        targetSdkVersion 23
         versionCode 19
         versionName "2.0"
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
     buildTypes {
         release {
+            debuggable false
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
         debug {
+            debuggable true
+            minifyEnabled false
+            signingConfig signingConfigs.debug
         }
+    }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
     }
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.android.support:design:22.2.1'
-    compile 'com.android.support:recyclerview-v7:22.2.1'
-    /*rxJava*/
-    compile 'io.reactivex:rxandroid:0.25.0'
-    compile 'io.reactivex:rxjava-math:0.21.0'
-    /*injections*/
-    compile 'com.jakewharton:butterknife:5.1.1'
-    /*pics*/
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
+    //support libs
+    compile "com.android.support:recyclerview-v7:$support_version"
+    compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:design:$support_version"
+    //reactive programing
+    compile 'io.reactivex:rxandroid:1.2.0'
+
+    compile 'io.reactivex:rxjava:1.1.4'     //kotlin
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //pisc
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.google.code.gson:gson:2.3'
-    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.7.4@aar'){
-        transitive=true
+    // DBFlow
+    kapt "com.raizlabs.android:DBFlow-Compiler:${dbflow_version}"
+    compile "com.raizlabs.android:DBFlow-Core:${dbflow_version}"
+    compile "com.raizlabs.android:DBFlow:${dbflow_version}"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    /*injections*/
+    compile 'com.jakewharton:butterknife:5.1.1'
+}
+buildscript {
+    ext.kotlin_version = '1.0.1-2'
+    ext.facebook_version = '4.11.0'
+    ext.dbflow_version = '2.2.1'
+    ext.support_version = '23.1.1'
+    ext.retrifitVersion = "2.0.0"
+
+    repositories {
+        mavenCentral()
     }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+kapt {
+    generateStubs = true
+}
+repositories {
+    mavenCentral()
 }
