--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,25 +2,27 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+apply from:'../libs.gradle'
+
 android {
-    signingConfigs {
-
-            debug {
-                storeFile file('debug.keystore')
-                keyAlias 'androiddebugkey'
-                keyPassword 'android'
-                storePassword 'android'
-            }
-
-    }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.omar.deathnote"
         minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 19
-        versionName "2.0"
+        targetSdkVersion 26
+        versionCode 20
+        versionName "3.0"
+    }
+    signingConfigs {
+
+        debug {
+            storeFile file('debug.keystore')
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storePassword 'android'
+        }
+
     }
     buildTypes {
         release {
@@ -47,45 +49,22 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    //support libs
-    compile "com.android.support:recyclerview-v7:$support_version"
-    compile "com.android.support:appcompat-v7:$support_version"
-    compile "com.android.support:design:$support_version"
-    //reactive programing
-    compile 'io.reactivex:rxandroid:1.2.0'
+    compile "com.android.support:recyclerview-v7:$versions.support"
+    compile "com.android.support:appcompat-v7:$versions.support"
+    compile "com.android.support:design:$versions.support"
 
-    compile 'io.reactivex:rxjava:1.1.4'     //kotlin
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
+
+    kapt "com.raizlabs.android:DBFlow-Compiler:$versions.dbflow"
+    compile "com.raizlabs.android:DBFlow-Core:$versions.dbflow"
+    compile "com.raizlabs.android:DBFlow:$versions.dbflow"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
+
+    compile "com.jakewharton:butterknife:$versions.butterknife"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$versions.butterknife"
+
     //pisc
+    compile 'io.reactivex:rxandroid:1.2.0'
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.google.code.gson:gson:2.3'
-    // DBFlow
-    kapt "com.raizlabs.android:DBFlow-Compiler:${dbflow_version}"
-    compile "com.raizlabs.android:DBFlow-Core:${dbflow_version}"
-    compile "com.raizlabs.android:DBFlow:${dbflow_version}"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    /*injections*/
-    compile 'com.jakewharton:butterknife:5.1.1'
-}
-buildscript {
-    ext.kotlin_version = '1.0.1-2'
-    ext.facebook_version = '4.11.0'
-    ext.dbflow_version = '2.2.1'
-    ext.support_version = '23.1.1'
-    ext.retrifitVersion = "2.0.0"
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-kapt {
-    generateStubs = true
-}
-repositories {
-    mavenCentral()
 }
