--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,22 +49,22 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:recyclerview-v7:$versions.support"
-    compile "com.android.support:appcompat-v7:$versions.support"
-    compile "com.android.support:design:$versions.support"
+    implementation "com.android.support:recyclerview-v7:$versions.support"
+    implementation "com.android.support:appcompat-v7:$versions.support"
+    implementation "com.android.support:design:$versions.support"
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 
     kapt "com.raizlabs.android:DBFlow-Compiler:$versions.dbflow"
-    compile "com.raizlabs.android:DBFlow-Core:$versions.dbflow"
-    compile "com.raizlabs.android:DBFlow:$versions.dbflow"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
+    implementation "com.raizlabs.android:DBFlow-Core:$versions.dbflow"
+    implementation "com.raizlabs.android:DBFlow:$versions.dbflow"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 
-    compile "com.jakewharton:butterknife:$versions.butterknife"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$versions.butterknife"
+    implementation "com.jakewharton:butterknife:$versions.butterknife"
+    kapt "com.jakewharton:butterknife-compiler:$versions.butterknife"
 
     //pisc
-    compile 'io.reactivex:rxandroid:1.2.0'
-    compile 'com.squareup.picasso:picasso:2.4.0'
-    compile 'com.google.code.gson:gson:2.3'
+    implementation 'io.reactivex:rxandroid:1.2.0'
+    implementation 'com.squareup.picasso:picasso:2.4.0'
+    implementation 'com.google.code.gson:gson:2.3'
 }
