--- a/libs.gradle
+++ b/libs.gradle
@@ -2,8 +2,9 @@ ext.versions = [
         'butterknife' : '8.8.1',
         'dbflow'  : '2.2.1',
         'facebook': '4.11.0',
+        'gson' : '2.3',
         'kotlin'  : '1.2.20',
-        'retrifit' : '2.0.0',
-        'rxAndroid' : '1.2.0',
-        'support' : '26.1.0'
+        'picasso' : '2.5.2',
+        'support' : '26.1.0',
+        'rxAndroid' : '2.0.1',
 ]
