--- a/libs.gradle
+++ b/libs.gradle
@@ -1,10 +1,13 @@
 ext.versions = [
-        'butterknife' : '8.8.1',
-        'dbflow'  : '2.2.1',
-        'facebook': '4.11.0',
-        'gson' : '2.3',
-        'kotlin'  : '1.2.20',
-        'picasso' : '2.5.2',
-        'support' : '26.1.0',
-        'rxAndroid' : '2.0.1',
+        'butterknife': '8.8.1',
+        'dbflow'     : '2.2.1',
+        'facebook'   : '4.11.0',
+        'gson'       : '2.3',
+        'kotlin'     : '1.2.20',
+        'picasso'    : '2.5.2',
+        'support'    : '26.1.0',
+        'rxAndroid'  : '2.0.1',
+        'dagger'     : '2.14.1',
+        'room'       : '1.0.0',
+        'timber'     : '4.6.0'
 ]
