--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$versions.dagger"
 
     implementation "com.jakewharton.timber:timber:$versions.timber"
+
+    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0'
+
 }
