--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0'
 
-    implementation 'com.github.alkurop:Android-Runtime-Permission-Manager:0.0.12'
+    implementation 'com.github.alkurop:Android-Runtime-Permission-Manager:0.0.13'
+    implementation 'com.github.alkurop:Android-Media-Picker:0.0.2'
 
 }
