--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ android {
 
 dependencies {
     implementation project(':database')
+    implementation project(':legacydatabase')
+    implementation project(':audiorecord')
 
     implementation "com.android.support:recyclerview-v7:$versions.support"
     implementation "com.android.support:appcompat-v7:$versions.support"
