--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label= "@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name=".main.MainActivity"
-            android:label="@string/app_name"
+            android:label= " "
             android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,14 +24,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".notes.legacy.ui.NoteActivity"
-            android:label=" "
-            android:launchMode="singleTop"
-            android:screenOrientation="sensorPortrait"
-            android:windowSoftInputMode="stateHidden|adjustResize" />
-
 
         <activity
             android:name=".notes.ContentActivity"
@@ -42,10 +34,10 @@
 
         <activity
             android:name="com.omar.deathnote.pref.PrefActivity"
-            android:label="Settings" />
+            android:label=" " />
         <activity
             android:name="com.omar.deathnote.pref.Contact"
-            android:label="Contact" />
+            android:label=" " />
         <activity
             android:name="com.omar.deathnote.picview.SingleViewActivity"
             android:label=" " />
