--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,7 @@ dependencies {
 
     implementation 'com.github.alkurop:Android-Runtime-Permission-Manager:0.0.13'
     implementation 'com.github.alkurop:Android-Media-Picker:0.0.9'
+    implementation 'com.stanfy.enroscar:enroscar-ui:2.1'
+
 
 }
