--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,10 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.omar.deathnote"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
-        versionCode 21
-        versionName "4.0"
+        versionCode 22
+        versionName "4.1"
     }
     signingConfigs {
         debug {
@@ -68,4 +68,6 @@ dependencies {
     implementation 'com.github.alkurop:Android-Runtime-Permission-Manager:0.0.13'
     implementation 'com.github.alkurop:Android-Media-Picker:0.1.1'
     implementation 'com.stanfy.enroscar:enroscar-ui:2.1'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
 }
