--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,7 @@ dependencies {
     implementation 'com.github.alkurop:Android-Media-Picker:0.1.6'
     implementation 'com.stanfy.enroscar:enroscar-ui:2.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'org.jsoup:jsoup:1.10.3'
+    implementation 'com.leocardz:link-preview:2.0.0@aar'
 
 }
