--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,5 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'org.jsoup:jsoup:1.10.3'
     implementation 'com.leocardz:link-preview:2.0.0@aar'
-
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
