--- a/database/build.gradle
+++ b/database/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 apply from: '../libs.gradle'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 27
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.compileSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,7 +22,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -29,7 +29,7 @@ dependencies {
     api "android.arch.persistence.room:runtime:$versions.room"
     api "android.arch.persistence.room:rxjava2:$versions.room"
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rxAndroid"
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    implementation "io.reactivex.rxjava2:rxkotlin:$versions.rxKotlin"
 
     kapt "android.arch.persistence.room:compiler:$versions.room"
     implementation "com.jakewharton.timber:timber:$versions.timber"
